engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compaction_completed.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
expression: normalize_compaction_snapshot(lines_to_single_string(&lines))
---
• Context compacted · <elapsed>
